2007-12-05 David Moore  <dcm@acm.org>
	* SVN 485: fix broken _get_string functions, which weren't actually
		   returning any data.
	* SVN 484: clean up error handling in grab_gray_image

2007-12-04 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 483: add "-std=gnu99" to compiler options
	* SVN 482: add log.h.
	* SVN 481: Updated logging mechanism to auto-print __LINE__, __FILE__
	           and __FUNCTION__. log.h was re-created for that purpose.
	* SVN 480: Fix leftover DC1394_NO_FRAME in OSX (Josh Rooke-Ley)
	
2007-12-03 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 479: Error codes are now negative.
        * SVN 478: capture_dequeue returns success if no frame is available
	           in POLL mode, but the frame will be NULL.

2007-12-02 David Moore  <dcm@acm.org>
	* SVN 477: Move dc1394_capture_set_device_filename to linux-specific
	           header.
	* SVN 476: Remove volatile fields from the public dc1394camera_t
	* SVN 475: configure.in: fix automake error

2007-12-02 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 472-4: better error code returned by register access functions
	
2007-12-01 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 471: fix missing declarations of "err" introduced in SVN 466
	           (thanks to Chris Rankin)
        * SVN 470: perform byte_per_packet name changes in juju, osx and msw
	           too (thanks to Chris Rankin)
	
2007-11-30 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 469: Rename byte_per_packet to packet_size everywhere. Perform a
	           few cleanups rearding that too.
	* SVN 468: Revert SVN 464 and harmonize #includes.
	* SVN 467: Minor changes in header files. 
	* SVN 466: Add auto-iso stop in capture_stop functions 
	* SVN 465: Implement auto-iso for capture setup (beta).
	* SVN 464: Fix #include in utils.h (Johann Schoonees)

2007-11-29 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 463: Cleanup error codes, check enum types in *_set_* functions,